src/backend/vm/snapshots/shlang__backend__vm__tests__Equality null.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"null == null\"))"
---
Ok(
    [
        Bool(
            true,
        ),
    ],
)
