src/backend/vm/snapshots/shlang__backend__vm__tests__Greater or equal true (greater).snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"6 >= 5\")"
---
Ok(
    [
        (
            Bool(
                true,
            ),
            2,
        ),
    ],
)
