src/backend/vm/snapshots/shlang__backend__vm__tests__Greater than false.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"3 > 5\"))"
---
Ok(
    [
        Bool(
            false,
        ),
    ],
)
