src/backend/vm/snapshots/shlang__backend__vm__tests__Inequality bool.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"true != false\")"
---
Ok(
    [
        (
            Bool(
                true,
            ),
            3,
        ),
    ],
)
