src/backend/vm/snapshots/shlang__backend__vm__tests__Inequality different types.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"10 == null\")"
---
Ok(
    [
        (
            Bool(
                false,
            ),
            2,
        ),
    ],
)
