src/backend/vm/snapshots/shlang__backend__vm__tests__Inequality int.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"10 != 5\")"
---
Ok(
    [
        (
            Bool(
                true,
            ),
            3,
        ),
    ],
)
