src/backend/vm/snapshots/shlang__backend__vm__tests__Inequality string.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"\\\"hello\\\" != \\\"world\\\"\")"
---
Ok(
    [
        (
            Bool(
                true,
            ),
            3,
        ),
    ],
)
