src/backend/vm/snapshots/shlang__backend__vm__tests__Lesser or equal false.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"6 <= 5\")"
---
Ok(
    [
        (
            Bool(
                false,
            ),
            2,
        ),
    ],
)
